kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
  namespace: vprofile
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: vproapp
  type: LoadBalancer
