kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
  namespace: vprofile
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    app: vprodb
  type: ClusterIP
