kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
  namespace: vprofile
spec:
  ports:
  - port: 11211
    targetPort: 11211
    protocol: TCP
  selector:
    app: vpromc
  type: ClusterIP
